objects/QPAR__c.object
<CustomObject>
    <description>cREATED FOR MARKETING CLOUD</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>QPARs</relationshipLabel>
        <relationshipName>QPARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>CREATED FOR MARKETING CLOUD QPAR SURVEY</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Created for Marketing cloud survey qpar survey.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engage_in_flexibility_activities__c</fullName>
        <description>Engage in flexibility activities such as stretching, yoga, chair yoga, or Tai Chi</description>
        <inlineHelpText>Engage in flexibility activities such as stretching, yoga, chair yoga, or Tai Chi</inlineHelpText>
        <label>QPAR_v1.0.7</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_in_light_activities__c</fullName>
        <description>Engage in light activities such as bowling, billiards, golf with a cart, fishing, or playing catch</description>
        <inlineHelpText>Engage in light activities such as bowling, billiards, golf with a cart, fishing, or playing catch</inlineHelpText>
        <label>QPAR_v1.0.3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_in_moderate_activities__c</fullName>
        <description>Engage in moderate activities such as doubles tennis, dancing, hunting, skating, golf without a cart, or hiking on flat terrain</description>
        <inlineHelpText>Engage in moderate activities such as doubles tennis, dancing, hunting, skating, golf without a cart, or hiking on flat terrain</inlineHelpText>
        <label>QPAR_v1.0.4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_in_strenuous_activities__c</fullName>
        <description>Engage in strenuous activities such as jogging, swimming, cycling, singles tennis, skiiing, hiking on hilly terrain, or climbing stairs for exercise</description>
        <inlineHelpText>Engage in strenuous activities such as jogging, swimming, cycling, singles tennis, skiiing, hiking on hilly terrain, or climbing stairs for exercise</inlineHelpText>
        <label>QPAR_v1.0.5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercises_to_increase_muscle_strength__c</fullName>
        <description>Any exercises to increase muscle strength or endurance, such as lifting weights, pushups, pullups, or chin-ups</description>
        <inlineHelpText>Any exercises to increase muscle strength or endurance, such as lifting weights, pushups, pullups, or chin-ups</inlineHelpText>
        <label>QPAR_v1.0.6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Engage_in_Flexible_Activities__c</fullName>
        <description>Engage in flexibility activities such as stretching, yoga, chair yoga, or Tai Chi (in hours)</description>
        <inlineHelpText>Engage in flexibility activities such as stretching, yoga, chair yoga, or Tai Chi (in hours)</inlineHelpText>
        <label>QPAR_v1.0.15</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Engage_in_Light_Activities__c</fullName>
        <description>Engage in light activities such as bowling, billiards, golf with a cart, fishing, or playing catch (in hours)</description>
        <inlineHelpText>Engage in light activities such as bowling, billiards, golf with a cart, fishing, or playing catch (in hours)</inlineHelpText>
        <label>QPAR_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Engage_in_Moderate_Activities__c</fullName>
        <description>Engage in moderate activities such as doubles tennis, dancing, hunting, skating, golf without a cart, or hiking on flat terrain (in hours)</description>
        <inlineHelpText>Engage in moderate activities such as doubles tennis, dancing, hunting, skating, golf without a cart, or hiking on flat terrain (in hours)</inlineHelpText>
        <label>QPAR_v1.0.12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Engage_in_Strenous_Activities__c</fullName>
        <description>Engage in strenuous activities such as jogging, swimming, cycling, singles tennis, skiiing, hiking on hilly terrain, or climbing stairs for exercise (in hours)</description>
        <inlineHelpText>Engage in strenuous activities such as jogging, swimming, cycling, singles tennis, skiiing, hiking on hilly terrain, or climbing stairs for exercise (in hours)</inlineHelpText>
        <label>QPAR_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Exercise_to_increase_muscle_streng__c</fullName>
        <description>Any exercises to increase muscle strength or endurance, such as lifting weights, pushups, pullups, or chin-ups
(in hours)</description>
        <inlineHelpText>Any exercises to increase muscle strength or endurance, such as lifting weights, pushups, pullups, or chin-ups
(in hours)</inlineHelpText>
        <label>QPAR_v1.0.14</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Light_Housework_or_Labor__c</fullName>
        <description>Any light housework or labor, such as dusting, washing dishes, mopping floors, ironing, or office work (in hours)</description>
        <inlineHelpText>Any light housework or labor, such as dusting, washing dishes, mopping floors, ironing, or office work (in hours)</inlineHelpText>
        <label>QPAR_v1.0.16</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Participate_in_sitting_activities__c</fullName>
        <description>Participate in sitting activities such as reading, book clubs, discussion groups, or handcrafts( in hours)</description>
        <inlineHelpText>Participate in sitting activities such as reading, book clubs, discussion groups, or handcrafts( in hours)</inlineHelpText>
        <label>QPAR_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Walk_outside__c</fullName>
        <description>Walk outside for any reason such as fun or exercise, walking the dog, in a mall, or around a track or path (in hours)</description>
        <inlineHelpText>Walk outside for any reason such as fun or exercise, walking the dog, in a mall, or around a track or path( in hours)</inlineHelpText>
        <label>QPAR_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Light_housework_or_labor__c</fullName>
        <description>Any light housework or labor, such as dusting, washing dishes, mopping floors, ironing, or office work</description>
        <inlineHelpText>Any light housework or labor, such as dusting, washing dishes, mopping floors, ironing, or office work</inlineHelpText>
        <label>QPAR_v1.0.8</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_in_sitting_activities__c</fullName>
        <description>Participate in sitting activities such as reading, book clubs, discussion groups, or handcrafts</description>
        <inlineHelpText>Participate in sitting activities such as reading, book clubs, discussion groups, or handcrafts</inlineHelpText>
        <label>QPAR_v1.0.1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_outside_for_any_reason__c</fullName>
        <description>Walk outside for any reason such as fun or exercise, walking the dog, in a mall, or around a track or path</description>
        <inlineHelpText>Walk outside for any reason such as fun or exercise, walking the dog, in a mall, or around a track or path</inlineHelpText>
        <label>QPAR_v1.0.2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QPAR</label>
    <nameField>
        <displayFormat>QPAR-{0000000000}</displayFormat>
        <label>QPAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QPARs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>